# JPC

code/: CMakeLists.txt  makefile
code/include/http/: httpServer.h
code/source/: CMakeLists.txt
code/source/http/: CMakeLists.txt  httpServer.cpp  http_server.cpp
code/source/main/: CMakeLists.txt  main.cpp
init/conf/: httpServer.properties
third/openssl/: readme.txt
third/poco/: readme.txt
workspace/: onekey_build.sh
